--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
   }
   
-  :root {
+:root {
     font-family: Inter, system-ui, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
@@ -15,10 +15,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
-    
   }
   
-  .App {
+.App {
     padding: 25px;
     min-height: 100vh;
     flex-direction: column;
@@ -30,7 +29,7 @@ body {
     justify-content: center;
   }
   
-  .header {
+.header {
     background-color: rgb(239, 239, 239);
     padding: 25px;
     border-radius: 25px;
@@ -38,20 +37,49 @@ body {
     transition: 0.2s ease;
     box-shadow: 5px 5px 5px rgba(164, 164, 164, 0.43);
     transition: 0.2s ease;
-    
   }
+
+.buttons {
+    padding-top: 25px;
+    display: flex;
+    justify-content: right;
+    gap: 15px;
+  }
+
+.parse {
+    background-color: #007635;
+    cursor: pointer;
+    }
+
+.reload {
+    background-color: #dbdbdb;
+    color: #000000;
+    }
+
+.input {
+    stroke-width: 1px;
+    box-shadow: #000000;
+    background-color: #dbdbdb;
+    box-shadow: 5px 5px 5px rgba(164, 164, 164, 0.43);
+    align-items: center;
+    display: grid;
+    justify-content: center;
+    border-radius: 25px;
+    padding: 25px;
+  }
+
+.header:hover {
+    outline: 1px solid rgb(109, 109, 109);  
+    }
   
-  .header:hover {
-    outline: 1px solid black;  }
-  
-  .grid-container {
+.grid-container {
     margin: 0rem 3rem 5rem 0rem;
     padding: 20px 0px 0px 0px;
     gap: 1rem;
     align-items: center;
     align-content: center;
     justify-content: center;
-  }
+    }
   
   .grid-item {
     padding: 1rem;
@@ -64,7 +92,6 @@ body {
     background-color: transparent;
     stroke: #213547;
     stroke-width: 2px;
-    
   }
   
   .grid-item:hover {
@@ -76,10 +103,11 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: grey;
-    stroke: #000000;
+    stroke: #6c6c6c;
     stroke-width: 2px;
     scale: .99;
-    box-shadow: 5px 5px 5px rgba(164, 164, 164, 0.43);}
+    box-shadow: 5px 5px 5px rgba(164, 164, 164, 0.43);
+    }
   
   .chunk-text {
     font-size: 1rem;
@@ -87,22 +115,20 @@ body {
   }
   
   input {
-    margin-bottom: 20px;
-    margin-right: 20px;
-    cursor: pointer;
+    font-size: 1rem;
+    margin-bottom: 15px;
   }
   
   h3 {
-    margin:0px;
-    margin-right: 2rem;
+    margin: 0px 0px 0px 0px;
     font-size:2rem
-  }
+    }
   
   h4 {
-    margin-right:2rem;
-  }
+    margin: 0px 0px 25px 0px;
+    }
   
-  a {
+a {
     font-weight: 500;
     color: #646cff;
     text-decoration: inherit;
@@ -121,20 +147,14 @@ body {
     font-weight: 400;
     font-family: inherit;
     background-color: #6B6B6B;
-    cursor: pointer;
     transition: border-color 0.25s;
     transform: scale(1);
     transition: 0.2s ease;
-    margin-left: 10px;
   }
   button:hover {
-    border-color: #007635;
     transform: scale(1.05);
   }
-  button:focus,
-  button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
+  
   
   @media (prefers-color-scheme: light) {
     :root {
